﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-11-20 Marc Delisle  <lem9@users.sourceforge.net>
    ### 2.7.0-rc1 released

2005-11-20 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/common.lib.php::PMA_showMySQLDocu()
      - undefined constant (if server connection fails)
    * libraries/select_theme.lib.php
      - undefined variable (if server connection fails)

2005-11-18 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/database_interface.lib.php: initialize in case there are
      no databases (MySQL < 5.0)

2005-11-18 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * server_databases.php:
      - require_once common.lib.php BEFORE ANYTHING else
      - unified style, removed tables
      - removed superuser check for dbstats
    * css/phpmyadmin.css.php:
      - small improvements
    * themes/darkblue_orange/css/*
      - fixed font sizes
    * lang/english-*: small improvements
    * tbl_properties_structure.php
      - do not truncate rowcount and next autoindex
    * /*
      - common.lib.php should REALLY REALLY and ALWAYS be the first include
      - no other calls to grab_gloabls.lib.php
    * fixed minimum_common for css files
    * header.inc.php: missing ; after &quot
    * libraries/function.js::pdfPaperSize()
      - function does not always return a vlaue
      - undeclared variables
    * libraries/display_export.lib.php
      - use superscript tag for comment
    * server_links.inc.php
      - require_once server_common.inc.php

2005-11-17 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html: patch #1353283, thanks to Isaac Bennetch
    * lang/finnish: update, thanks to Jouni Kahkonen
    * lang/belarusian updates, thanks to Jaska Zedlik

2005-11-17 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/grab_globals.lib.php: just to be sure:
      - clean/empty $GLOBALS with $variables_whitelist
      - unset some vars after use