@@ -49,14 +49,14 @@ function PMA_getBookmarksParam()
  */
 function PMA_listBookmarks($db, $cfgBookmark)
 {
-    global $dbh;
+    global $controllink;
 
     $query  = 'SELECT label, id FROM '. PMA_backquote($cfgBookmark['db']) . '.' . PMA_backquote($cfgBookmark['table'])
             . ' WHERE dbase = \'' . PMA_sqlAddslashes($db) . '\''
             . ' AND (user = \'' . PMA_sqlAddslashes($cfgBookmark['user']) . '\''
             . '      OR user = \'\')'
             . ' ORDER BY label';
-    $result = PMA_DBI_query($query, $dbh, PMA_DBI_QUERY_STORE);
+    $result = PMA_DBI_query($query, $controllink, PMA_DBI_QUERY_STORE);
 
     // There are some bookmarks -> store them
     // use the unique id as the key
@@ -90,7 +90,7 @@ function PMA_listBookmarks($db, $cfgBookmark)
  */
 function PMA_queryBookmarks($db, $cfgBookmark, $id, $id_field = 'id', $action_bookmark_all = FALSE)
 {
-    global $dbh;
+    global $controllink;
 
     if (empty($cfgBookmark['db']) || empty($cfgBookmark['table'])) {
         return '';
@@ -101,7 +101,7 @@ function PMA_queryBookmarks($db, $cfgBookmark, $id, $id_field = 'id', $action_bo
                     . ($action_bookmark_all? '' : ' AND (user = \'' . PMA_sqlAddslashes($cfgBookmark['user']) . '\''
                     . '      OR user = \'\')' )
                     . ' AND ' . PMA_backquote($id_field) . ' = ' . $id;
-    $result = PMA_DBI_try_query($query, $dbh);
+    $result = PMA_DBI_try_query($query, $controllink);
     if (!$result) return FALSE;
     list($bookmark_query) = PMA_DBI_fetch_row($result) or array(FALSE);
 
@@ -124,7 +124,7 @@ function PMA_queryBookmarks($db, $cfgBookmark, $id, $id_field = 'id', $action_bo
  */
 function &PMA_queryDBBookmarks($db, $cfgBookmark, &$table_array)
 {
-    global $dbh;
+    global $controllink;
     $bookmarks = array();
 
     if (empty($cfgBookmark['db']) || empty($cfgBookmark['table'])) {
@@ -139,7 +139,7 @@ function &PMA_queryDBBookmarks($db, $cfgBookmark, &$table_array)
     $query          = 'SELECT label, query FROM ' . PMA_backquote($cfgBookmark['db']) . '.' . PMA_backquote($cfgBookmark['table'])
                     . ' WHERE dbase = \'' . PMA_sqlAddslashes($db) . '\''
                     . (count($search_for) > 0 ? ' AND label IN (' . implode(', ', $search_for) . ')' : '');
-    $result = PMA_DBI_try_query($query, $dbh, PMA_DBI_QUERY_STORE);
+    $result = PMA_DBI_try_query($query, $controllink, PMA_DBI_QUERY_STORE);
     if (!$result || PMA_DBI_num_rows($result) < 1) return $bookmarks;
     while ($row = PMA_DBI_fetch_assoc($result)) {
         $bookmarks[$row['label']] = $row['query'];
@@ -163,11 +163,11 @@ function &PMA_queryDBBookmarks($db, $cfgBookmark, &$table_array)
  */
 function PMA_addBookmarks($fields, $cfgBookmark, $all_users = false)
 {
-    global $dbh;
+    global $controllink;
 
     $query = 'INSERT INTO ' . PMA_backquote($cfgBookmark['db']) . '.' . PMA_backquote($cfgBookmark['table'])
            . ' (id, dbase, user, query, label) VALUES (NULL, \'' . PMA_sqlAddslashes($fields['dbase']) . '\', \'' . ($all_users ? '' : PMA_sqlAddslashes($fields['user'])) . '\', \'' . PMA_sqlAddslashes(urldecode($fields['query'])) . '\', \'' . PMA_sqlAddslashes($fields['label']) . '\')';
-    $result   = PMA_DBI_query($query, $dbh);
+    $result   = PMA_DBI_query($query, $controllink);
 
     return TRUE;
 } // end of the 'PMA_addBookmarks()' function
@@ -186,13 +186,13 @@ function PMA_addBookmarks($fields, $cfgBookmark, $all_users = false)
  */
 function PMA_deleteBookmarks($db, $cfgBookmark, $id)
 {
-    global $dbh;
+    global $controllink;
 
     $query  = 'DELETE FROM ' . PMA_backquote($cfgBookmark['db']) . '.' . PMA_backquote($cfgBookmark['table'])
             . ' WHERE (user = \'' . PMA_sqlAddslashes($cfgBookmark['user']) . '\''
             . '        OR user = \'\')'
             . ' AND id = ' . $id;
-    $result = PMA_DBI_try_query($query, $dbh);
+    $result = PMA_DBI_try_query($query, $controllink);
 } // end of the 'PMA_deleteBookmarks()' function
 
 
