@@ -113,8 +113,8 @@ if (!isset($resize)) {
 /**
  * Close MySql non-persistent connections
  */
-if (isset($GLOBALS['dbh']) && $GLOBALS['dbh']) {
-    @PMA_DBI_close($GLOBALS['dbh']);
+if (isset($GLOBALS['controllink']) && $GLOBALS['controllink']) {
+    @PMA_DBI_close($GLOBALS['controllink']);
 }
 if (isset($GLOBALS['userlink']) && $GLOBALS['userlink']) {
     @PMA_DBI_close($GLOBALS['userlink']);
