@@ -7,6 +7,7 @@ $Source$
 
 2005-11-20 Marc Delisle  <lem9@users.sourceforge.net>
     ### 2.7.0-rc1 released
+    * many files: $dbh becomes $controllink for better contrast with $userlink
 
 2005-11-20 Sebastian Mendel <cybot_tm@users.sourceforge.net>
     * libraries/common.lib.php::PMA_showMySQLDocu()
